[package]
name = "my_payment_splitter"
version = "1.0.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_metadata = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_storage = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_lang = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }
ink_prelude = { git = "https://github.com/Supercolony-net/ink", branch = "feature/recovery", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

# These dependencies
payment-splitter = { path = "../../contracts/finance/payment-splitter", default-features = false }
brush = { path = "../../utils/brush", default-features = false }

# payment-splitter uses dividing inside, so your version of rust can require you to disable check overflow.
[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[lib]
name = "my_payment_splitter"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "brush/std",
    "payment-splitter/std",
]
ink-as-dependency = []
