[package]
name = "revert_on_error_poc"
version = "1.0.0"
authors = ["Supercolony <sven.seven@supercolony.net>"]
edition = "2021"

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", default-features = false, rev="ee42309d830b1b4b4f3874c2f53c3f5d6ae9b47f" }
ink_metadata = { git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true, rev="ee42309d830b1b4b4f3874c2f53c3f5d6ae9b47f"  }
ink_env = {  git = "https://github.com/paritytech/ink", default-features = false, rev="ee42309d830b1b4b4f3874c2f53c3f5d6ae9b47f"  }
ink_storage = {  git = "https://github.com/paritytech/ink", default-features = false, rev="ee42309d830b1b4b4f3874c2f53c3f5d6ae9b47f"  }
ink_lang = {  git = "https://github.com/paritytech/ink", default-features = false, rev="ee42309d830b1b4b4f3874c2f53c3f5d6ae9b47f"  }
ink_prelude = {  git = "https://github.com/paritytech/ink", default-features = false, rev="ee42309d830b1b4b4f3874c2f53c3f5d6ae9b47f"  }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "revert_on_error_poc"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []